--- a/Task_1/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Task_1/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -34,6 +34,9 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/data-provider']">Result Sql vs Linq</a>
+          </li>
         </ul>
       </div>
     </div>
